--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24"
-                        class="d-inline-block align-text-top">
+                    <img src="images/GWDS.svg" alt="Logo" width="40" height="40"
+                        class="d-inline-block align-text-center">
                     Bootstrap
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -113,6 +113,38 @@
     </main>
     <!-- this ends the main code -->
 
+    <div class="container-fluid py-3">
+
+        <div id="carouselExampleFade" class="carousel slide carousel-fade">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="http://placekitten.com/600/300" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://placedog.net/600/300" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://placebear.com/600/300" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+    </div>
+
+    <div class="container py-3">
+        <h1 class="display-1 text-center">Bootstrao is my Friend</h1>
+        <p class="lead text-center">This makes life so much easier, when there is a framework doing most of the heavy lifting for me.</p>
+    </div>
 
 
     <script src="js/bootstrap.min.js"></script>
