--- a/index.html
+++ b/index.html
@@ -146,6 +146,29 @@
         <p class="lead text-center">This makes life so much easier, when there is a framework doing most of the heavy lifting for me.</p>
     </div>
 
+    <div class="container-fluid">
+        <div class="row mb-3">
+          <div class="col-md-4">
+            <img src="images/caterpillar.jpg" class="'img-fluid" alt="'...">
+            <h4>How Doth the little crocodile</h4>
+            <p> Improve his shining tail, And pour the waters of the Nile On every
+                golden scale!</p>
+          </div>
+          <div class="col-md-4">
+            <img src="images/fatherwilliam.jpg" class="'img-fluid" alt="'...">
+            <h4>How Doth the little crocodile</h4>
+            <p> Improve his shining tail, And pour the waters of the Nile On every
+                golden scale!</p>
+          </div>
+          <div class="col-md-4">
+            <img src="images/caterpillar.jpg" class="'img-fluid" alt="'...">
+            <h4>How Doth the little crocodile</h4>
+            <p> Improve his shining tail, And pour the waters of the Nile On every
+                golden scale!</p>
+          </div>
+        </div>
+      </div>
+
 
     <script src="js/bootstrap.min.js"></script>
 
