--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
 
 
     <!-- TITLE GOES HERE -->
+    <title>Bootstrap 5 is My Friend</title>
 
 
 
@@ -27,11 +28,10 @@
         <!-- I forgot to have you put the header in, so you get this on on me -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="#">Navbar</a>
                     <img src="images/GWDS.svg" alt="Logo" width="40" height="40"
                         class="d-inline-block align-text-center">
-                    Bootstrap
-                </a>
+                    <!-- Bootstrap -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -149,23 +149,45 @@
     <div class="container-fluid">
         <div class="row mb-3">
           <div class="col-md-4">
-            <img src="images/caterpillar.jpg" class="'img-fluid" alt="'...">
-            <h4>How Doth the little crocodile</h4>
-            <p> Improve his shining tail, And pour the waters of the Nile On every
-                golden scale!</p>
+            <img src="images/caterpillar.jpg" class="img-fluid" alt="'...">
+            <h4>How Doth the Little Crocodile</h4>
+            <p>How doth the little crocodile Improve his shining tail, And pour the waters of the Nile On every golden scale! How cheerfully he seems to grin, How neatly spreads his claws, And welcomes little fishes in, With gently smiling jaws!</p>
           </div>
           <div class="col-md-4">
-            <img src="images/fatherwilliam.jpg" class="'img-fluid" alt="'...">
-            <h4>How Doth the little crocodile</h4>
-            <p> Improve his shining tail, And pour the waters of the Nile On every
-                golden scale!</p>
+            <img src="images/fatherwilliam.jpg" class="img-fluid" alt="'...">
+            <h4>Father William</h4>
+            <p>"You are old, Father William," the young man said, "And your hair has become very white; And yet you incessantly stand on your head — Do you think, at your age, it is right?"</p>
+            <p>"In my youth," Father William replied to his son, "I feared it might injure the brain; But now that I'm perfectly sure I have none, Why, I do it again and again."</p>
           </div>
           <div class="col-md-4">
-            <img src="images/caterpillar.jpg" class="'img-fluid" alt="'...">
-            <h4>How Doth the little crocodile</h4>
-            <p> Improve his shining tail, And pour the waters of the Nile On every
-                golden scale!</p>
+            <img src="images/walrus.jpeg" class="img-fluid" alt="'...">
+            <h4>The Walrus and the Carpentere</h4>
+            <p>The time has come,' the Walrus said, To talk of many things: Of shoes — and ships — and sealing-wax — Of cabbages — and kings — And why the sea is boiling hot — And whether pigs have wings.'</p>
+            <p>But wait a bit,' the Oysters cried, Before we have our chat; For some of us are out of breath, And all of us are fat!' No hurry!' said the Carpenter. They thanked him much for that.</p>
           </div>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="row mb-3">
+            <div class="col">
+                <figure class="figure">
+                    <img src="images/shoes.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <!-- <figcaption class -->
+                        <p> A caption for the above image</p>
+                </figure>
+
+
+            </div>
+
+            <div class="col">
+                <figure class="figure">
+                    <img src="images/shoes.jpg" class="figure-img img-fluid rounded" alt="...">
+                    <!-- <figcaption class -->
+                        <p> A caption for the above image</p>
+                </figure>
+
+            </div>
         </div>
       </div>
 
